# mood-music-recommender-enhanced

./: .flake8  .gitignore  .pre-commit-config.yaml  1200_song_mapped.csv  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENTS.md  FEATURES.md  LICENSE  README.md  README_new.md  mypy.ini  pyproject.toml  railway.json  render.yaml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run_app.py
.github/workflows/: ci.yml  coverage.yml  dependency-check.yml  docs.yml  performance.yml  release.yml
assets/: badges.md  deployment_checklist.md
assets/demo/: demo_script.md  performance_benchmarks.md
assets/js/: search.js
assets/screenshots/: accessibility_demo_placeholder.txt
docs/: DEPLOYMENT.md  FEATURES.md
scripts/: generate_portfolio_assets.py
src/musicrec/: data_processor.py  log_setup.py  logging.py  main.py  music_structures.py  recommendation_engine.py  visualization.py
tests/: conftest.py  test_accessibility_integration.py  test_config.py  test_core_engine.py  test_core_structures.py  test_create_sample_data.py  test_fuzzy_search.py  test_input_validation.py  test_integration_cli.py  test_keyboard_navigation.py  test_logging.py  test_main.py  test_music_structures.py  test_recommendation_engine.py  test_responsive_ui.py  test_retry_logic.py  test_search.py  test_search_accessibility.py  test_search_functionality.py  test_search_integration.py  test_search_js.py  test_search_perf.py  test_search_performance.py  test_ui_features.py  test_ui_integration.py
tests/accessibility/: test_keyboard_navigation.py  test_responsive_ui.py  test_search_accessibility.py
tests/features/: test_ui_features.py  (+1 more)
(+28 files in other folders)
