[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicrec"
version = "1.1.0"
description = "Enhanced mood-driven music recommender system"
authors = [
    {name = "Qian (Angela) Su", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "networkx>=2.6.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/angelaqaaa/mood-music-recommender-enhanced"
Repository = "https://github.com/angelaqaaa/mood-music-recommender-enhanced"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/musicrec --cov-report=term-missing --timeout=300 --maxfail=5"
markers = [
    "integration: Integration tests",
    "unit: Unit tests",
    "performance: Performance tests"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E402"]
per-file-ignores = [
    "tests/*:E402"
]
